# AGIO

./: .gitignore  .gitmodules  0001-Individual-refactored.patch  CMakeLists.txt  CMakeSettings.json  LICENSE  ParametricConfig.py  ParametricConfigUtils.py  ParametricConfigurator.py  README.md  SensibilityTest.py  combinations found  decision_times.xlsx  process_interrel.py  process_params.py  process_sensibility.py  process_times.py  results_plot.nb  results_wrong_param_config.7z  test.py  test_bayes.py  test_core_loop.py  test_decision_tree.py
Pagina/: README.md  config.js  evaluacion.md  main.md  marcoTeorico.md  materiales.md  package.json  presentacion.pptx  propuesta.md  resultados.md  sidebar.md
assets/: body0.psd  body1.psd  body2.psd  body3.psd  body4.psd  carnivore.psd  food_sprite.psd  ground_srpite.psd  herbivore.psd  omnivore.psd  wall_sprite.psd  water_sprite.psd
assets/worlds/: world0.txt  world0.xlsx  world1.txt  world1.xlsx  world2.txt  world2.xlsx  world3.txt  world3.xlsx  world4.txt  world4.xlsx  world_to_csv.py
backs/: baseline.csv  interrelations.csv
cfg/: neat_test_config.txt
src/: WorkerPool.h  neat_test.cpp  test.cpp
src/Core/: AGIO.cpp  Config.cpp  Config.h  ConfigLoader.h
src/Evolution/: Globals.cpp  Globals.h  Individual.cpp  Individual.h  Interface.h  MorphologyTag.cpp  MorphologyTag.h  Population.cpp  Population.h
src/Interface/: BaseIndividual.h  Interface.h
src/Serialization/: SIndividual.cpp  SIndividual.h  SNetwork.cpp  SNetwork.h  SParameter.h  SPopulation.cpp  SPopulation.h  SRegistry.cpp  SRegistry.h
src/Tests/: ParametricTester.h  neat_serialization_test.cpp  neat_test.cpp  test.cpp
src/Tests/3DExperiment/: 3DExperiment.cpp  3DExperiment.h  Config.cfg  Interface.cpp  Interface.h  Public.h  main.cpp
src/Tests/ComplexSystem/: ComplexSystem.cpp  ComplexSystem.h  ComplexSystemEvolution.cpp  Config.cfg  HumanTest.cpp  InterrelationsTest.cpp  MemoryTest.cpp  NNGraphsTests.cpp  PerfTest.cpp  PublicInterfaceImpl.cpp  PublicInterfaceImpl.h  main.cpp  world.xlsx
src/Tests/DiversityPlot/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.h  Character.cpp  Character.h  Config.cfg  DiversityPlot.cpp  DiversityPlot.h  DiversityPlotEvolution.cpp  HumanTest.cpp  InterrelationsTest.cpp  MemoryTest.cpp  NNGraphsTests.cpp  PerfTest.cpp  PublicInterfaceImpl.cpp  PublicInterfaceImpl.h  main.cpp  mainGraphics.cpp  world.txt  world_to_csv.py
src/Tests/DiversityPlot/Greedy/: GreedyPrey.cpp  GreedyPrey.h
src/Tests/Greedy/: Greedy.cpp  Greedy.h
src/Tests/Prey/: Prey.cpp
src/Tests/PreyPredator/: Config.cfg  Config.h  ExperimentConfig.h  NEATConfig.txt  PreyPredator.cpp  PreyPredator.h  PreyPredatorEvolution.cpp  PublicInterfaceImpl.cpp  PublicInterfaceImpl.h  SimSizeTest.cpp  main.cpp
src/Utils/: Buffer2D.h  ConsoleRenderer.cpp  ConsoleRenderer.h  SFMLRenderer.cpp  SFMLRenderer.h  Utils.cpp  Utils.h  WorkerPool.h
src/Utils/Math/: Float2.h  Float3.h  Float4.h  Int2.h
